<resources>
    <string name="app_name">TesteAccenture</string>
    <string name="action_settings">Settings</string>
    <string name="conta_item">Conta de Luz</string>
    <string name="pagamento">Pagamento</string>
    <string name="valor">R$1.000,00</string>
    <string name="data">12/12/2018</string>
    <string name="nome_usuario">Jose da Silva Teste</string>
    <string name="numero_conta">2050 / 01.111222-4</string>
    <string name="saldo_conta">R$1.000,00</string>
    <string name="conta">Conta</string>
    <string name="saldo">Saldo</string>
</resources>
